--- a/helloWorld.html
+++ b/helloWorld.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1> Sitio web cool</h1>
-    <p>Saludos people</p>
+    <p>Saludos people, casi que no la logro, qué horror</p>
 </body>
 </html>
